# OrthodoxReverb

./: .gitignore  README.md
OrthodoxReverbPlugin/: OrthodoxReverbPlugin.jucer
OrthodoxReverbPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  bodebug.hpp
ext/ir.lv2-38bf3ec/: CMakeLists.txt  Makefile  Makefile_pg  ir_gui.cc
notes/: 2024.11.21.txt  2024.11.28.txt  2024.12.02.txt  2024.12.17.txt  links.txt  todo.txt
notes/boris_notes/: 2024.11.22.txt  2024.11.25.txt  2024.12.13.txt  2024.12.17.txt  2025.02.06.txt  2025.02.12.txt
notes/howto/: HowToBuildJuceProject.txt  HowToLoadVstPluginInReaper.txt  HowToSetupJuceProject.txt
